video thumbnail not showing in mobile version fixing.

--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ main {
 } 
 
 .video-card {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
